toolchain/internal/core/analysis/testdata/errors/collisions/proc_input_collision.vdl
// @expect: E901
// Type collides with auto-generated GetUserInput from proc GetUser

rpc Users {
  proc GetUser {
    input {
      id: string
    }

    output {
      name: string
    }
  }
}

type GetUserInput {
  userId: string
}
